page title updated

--- a/bank-account.html
+++ b/bank-account.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | Bank Account | Legal Document Clearing Services in Dubai
+      IDC Typing | Bank Account | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
