--- a/business_consulting.html
+++ b/business_consulting.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | Business Consulting | Legal Document Clearing Services in Dubai
+      IDC Typing | Business Consulting | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
