--- a/business_setup.html
+++ b/business_setup.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | Business Setup | Legal Document Clearing Services in Dubai
+      IDC Typing | Business Setup | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
