--- a/certificate_attestation.html
+++ b/certificate_attestation.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | Certificate Attestation | Legal Document Clearing Services in Dubai
+      IDC Typing | Certificate Attestation | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
