--- a/company_liquidation.html
+++ b/company_liquidation.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | Company Liquidation | Legal Document Clearing Services in Dubai
+      IDC Typing | Company Liquidation | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
