--- a/ejari_service.html
+++ b/ejari_service.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | Ejari Services | Legal Document Clearing Services in Dubai
+      IDC Typing | Ejari Services | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
