--- a/employment_visa.html
+++ b/employment_visa.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | Employment Visa | Legal Document Clearing Services in Dubai
+      IDC Typing | Employment Visa | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
