--- a/flexible_workspaces.html
+++ b/flexible_workspaces.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | Flexible Workspaces | Legal Document Clearing Services in Dubai
+      IDC Typing | Flexible Workspaces | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
