--- a/international_driving_license.html
+++ b/international_driving_license.html
@@ -14,8 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | International Driving License | Legal Document Clearing Services in
-      Dubai
+      IDC Typing | International Driving License | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
@@ -225,9 +224,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="
-              background-image: url('images/driving.png');
-            "
+            style="background-image: url('images/driving.png')"
           >
             <div class="carousel-caption">
               <div class="caption-content">
