--- a/investor_visa.html
+++ b/investor_visa.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | Investor Visa | Legal Document Clearing Services in Dubai
+      IDC Typing | Investor Visa | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
