--- a/license_renewal.html
+++ b/license_renewal.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | License Renewal | Legal Document Clearing Services in Dubai
+      IDC Typing | License Renewal | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
