--- a/medical_typing.html
+++ b/medical_typing.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | Medical/ID Typing | Legal Document Clearing Services in Dubai
+      IDC Typing | Medical/ID Typing | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
