--- a/pro_services.html
+++ b/pro_services.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | PRO Services | Legal Document Clearing Services in Dubai
+      IDC Typing | PRO Services | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
