--- a/talent_visa.html
+++ b/talent_visa.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images/logo_icononly.png" type="image/gif" />
 
     <!-- SEO Tags -->
-    <title>IDC | Talent Visa | Legal Document Clearing Services in Dubai</title>
+    <title>IDC Typing | Talent Visa | Document Clearing Services in Dubai</title>
     <meta
       name="description"
       content="IDC provides fast, reliable legal document clearing, attestation, translation, PRO and visa services in Dubai. Trust our experts for hassle-free UAE compliance."
