--- a/trade_license.html
+++ b/trade_license.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | Trade License | Legal Document Clearing Services in Dubai
+      IDC Typing | Trade License | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
