--- a/vat_registration.html
+++ b/vat_registration.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | VAT Registration | Legal Document Clearing Services in Dubai
+      IDC Typing | VAT Registration | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
