--- a/virtual_ejari_service.html
+++ b/virtual_ejari_service.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | Virtual Ejari Services | Legal Document Clearing Services in Dubai
+      IDC Typing | Virtual Ejari Services | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
