--- a/license_amendment.html
+++ b/license_amendment.html
@@ -14,7 +14,7 @@
 
     <!-- SEO Tags -->
     <title>
-      IDC | License Amendment | Legal Document Clearing Services in Dubai
+      IDC Typing | License Amendment | Document Clearing Services in Dubai
     </title>
     <meta
       name="description"
