--- a/service.html
+++ b/service.html
@@ -219,14 +219,12 @@
 
     <section class="service_section layout_padding">
       <div class="container">
-        <div class="heading_container heading_center">
+        <div class="heading_container heading_center mb-4">
           <h3 class="font-weight-bold">Our Services</h3>
         </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
+        <div class="row align-items-stretch">
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="box h-100">
               <div class="img-box">
                 <img loading="lazy" src="images/briefcase-solid.svg" alt="" />
               </div>
@@ -246,8 +244,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="box h-100">
               <div class="img-box">
                 <img loading="lazy" src="images/id-card-regular.svg" alt="" />
               </div>
@@ -266,10 +264,14 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="box h-100">
               <div class="img-box">
-                <img loading="lazy" src="images/arrows-rotate-solid.svg" alt="" />
+                <img
+                  loading="lazy"
+                  src="images/arrows-rotate-solid.svg"
+                  alt=""
+                />
               </div>
               <div class="detail-box">
                 <h4>Renewal and Amendments</h4>
@@ -287,8 +289,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="box h-100">
               <div class="img-box">
                 <img loading="lazy" src="images/pencil-solid.svg" alt="" />
               </div>
@@ -307,8 +309,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="box h-100">
               <div class="img-box">
                 <img loading="lazy" src="images/file-regular.svg" alt="" />
               </div>
@@ -327,10 +329,14 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="box h-100">
               <div class="img-box">
-                <img loading="lazy" src="images/square-check-regular.svg" alt="" />
+                <img
+                  loading="lazy"
+                  src="images/square-check-regular.svg"
+                  alt=""
+                />
               </div>
               <div class="detail-box">
                 <h4>Attestation Services</h4>
