--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                 <!-- Contact form -->
                 <div class="mt-4">
                   <div class="card border-0">
-                    <div class="card-body">
+                    <div class="card-body form_container">
                       <form>
                         <div class="form-row">
                           <div class="form-group col-md-4">
