--- a/golden_visa.html
+++ b/golden_visa.html
@@ -13,7 +13,9 @@
     <link rel="icon" href="images/logo_icononly.png" type="image/gif" />
 
     <!-- SEO Tags -->
-    <title>IDC Typing | Golden Visa | Document Clearing Services in Dubai</title>
+    <title>
+      IDC Typing | Golden Visa | Document Clearing Services in Dubai
+    </title>
     <meta
       name="description"
       content="IDC provides fast, reliable legal document clearing, attestation, translation, PRO and visa services in Dubai. Trust our experts for hassle-free UAE compliance."
@@ -514,22 +516,10 @@
             <div class="info_link_box">
               <h4>Links</h4>
               <div class="info_links">
-                <a class="" href="/">
-                  <img src="images/nav-bullet.png" alt="" />
-                  Home
-                </a>
-                <a class="" href="about.html">
-                  <img src="images/nav-bullet.png" alt="" />
-                  About
-                </a>
-                <a class="" href="service.html">
-                  <img src="images/nav-bullet.png" alt="" />
-                  Services
-                </a>
-                <a class="" href="contact.html">
-                  <img src="images/nav-bullet.png" alt="" />
-                  Contact Us
-                </a>
+                <a class="" href="/"> Home </a>
+                <a class="" href="about.html"> About </a>
+                <a class="" href="service.html"> Services </a>
+                <a class="" href="contact.html"> Contact Us </a>
               </div>
             </div>
           </div>
