--- a/service.html
+++ b/service.html
@@ -408,22 +408,10 @@
             <div class="info_link_box">
               <h4>Links</h4>
               <div class="info_links">
-                <a class="" href="/">
-                  <img src="images/nav-bullet.png" alt="" />
-                  Home
-                </a>
-                <a class="" href="about.html">
-                  <img src="images/nav-bullet.png" alt="" />
-                  About
-                </a>
-                <a class="active" href="service.html">
-                  <img src="images/nav-bullet.png" alt="" />
-                  Services
-                </a>
-                <a class="" href="contact.html">
-                  <img src="images/nav-bullet.png" alt="" />
-                  Contact Us
-                </a>
+                <a class="" href="/"> Home </a>
+                <a class="" href="about.html"> About </a>
+                <a class="active" href="service.html"> Services </a>
+                <a class="" href="contact.html"> Contact Us </a>
               </div>
             </div>
           </div>
