--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
     <!-- service section -->
 
-    <section class="service_section layout_padding">
+    <section class="service_section layout_padding-top">
       <div class="container">
         <div class="heading_container heading_center mb-4">
           <h3 class="font-weight-bold">Our Services</h3>
@@ -448,7 +448,7 @@
 
     <!-- about section -->
 
-    <section class="about_section layout_padding-bottom">
+    <section class="about_section layout_padding">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
